First commit - Initial project setup

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,6 +7,9 @@ apply plugin: "com.facebook.react"
  * By default you don't need to apply any configuration, just uncomment the lines you need.
  */
 react {
+
+  apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+
     /* Folders */
     //   The root of your project, i.e. where "package.json" lives. Default is '../..'
     // root = file("../../")
@@ -105,7 +108,10 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+
 }
+
+
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
@@ -117,3 +123,5 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+  
