--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.77.1",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.23.1",
+    "react-native-masonry-list": "^2.16.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
