--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.2",
+    "react-native-youtube-iframe": "^2.3.0",
     "tailwindcss": "^3.4.17",
     "yup": "^1.6.1"
   },
