--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.77.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.23.1",
+    "react-native-image-picker": "^8.2.0",
     "react-native-masonry-list": "^2.16.2",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
